@@ -1,3 +1,10 @@
+Thu Mar 18 01:07:34 PST 2004  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/List.cpp:
+	* src/List.h:
+	* src/Makefile.am:
+	  - Added a basic linked list class.
+
 Thu Mar 18 00:45:05 PST 2004  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/IsoMapObjectFactory.cpp:
